--- a/Fx/index.html
+++ b/Fx/index.html
@@ -77,88 +77,80 @@
 						<article>
 							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Pulvinar sagittis congue</a></h3>
+								<h3><a href="#">Web Development</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>A web development team creates and manages websites.</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Fermentum sagittis proin</a></h3>
+								<h3><a href="#">Events Planning</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>An event planning team organizes and manages events.</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+								<h3><a href="#">Design</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>A design team creates and develops visual concepts and graphics.</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Ultrices urna sit lobortis</a></h3>
+								<h3><a href="#">Store</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Varius magnis sollicitudin</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>A store team manages sales and ensures customer satisfaction.</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Pulvinar sagittis congue</a></h3>
+								<h3><a href="#">Web Development</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>A web development team creates and manages websites.</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Fermentum sagittis proin</a></h3>
+								<h3><a href="#">Events Planning</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>An event planning team organizes and manages events.</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+								<h3><a href="#">Design</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>A design team creates and develops visual concepts and graphics.</p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Ultrices urna sit lobortis</a></h3>
+								<h3><a href="#">Store</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>A store team manages sales and ensures customer satisfaction.</p>
 						</article>
 
-						<article>
+						<!-- <article>
 							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 							<header>
 								<h3><a href="#">Varius magnis sollicitudin</a></h3>
 							</header>
 							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
+						</article> -->
 
 					</div>
 				</section>
 
 			<!-- Main -->
-				<div class="wrapper style2">
+				<!-- <div class="wrapper style2">
 
 					<article id="main" class="container special">
 						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
@@ -186,8 +178,8 @@
 
 				</div>
 
-			<!-- Features -->
-				<div class="wrapper style1">
+			 Features -->
+				<!-- <div class="wrapper style1">
 
 					<section id="features" class="container special">
 						<header>
@@ -228,7 +220,7 @@
 						</div>
 					</section>
 
-				</div>
+				</div> -->
 
 			<!-- Footer -->
 				<div id="footer">
@@ -236,7 +228,7 @@
 						<div class="row">
 
 							<!-- Tweets -->
-								<section class="col-4 col-12-mobile">
+								<!-- <section class="col-4 col-12-mobile">
 									<header>
 										<h2 class="icon brands fa-twitter circled"><span class="label">Tweets</span></h2>
 									</header>
@@ -266,10 +258,10 @@
 											</article>
 										</li>
 									</ul>
-								</section>
+								</section> -->
 
 							<!-- Posts -->
-								<section class="col-4 col-12-mobile">
+								<!-- <section class="col-4 col-12-mobile">
 									<header>
 										<h2 class="icon solid fa-file circled"><span class="label">Posts</span></h2>
 									</header>
@@ -307,10 +299,10 @@
 											</article>
 										</li>
 									</ul>
-								</section>
+								</section> -->
 
 							<!-- Photos -->
-								<section class="col-4 col-12-mobile">
+								<!-- <section class="col-4 col-12-mobile">
 									<header>
 										<h2 class="icon solid fa-camera circled"><span class="label">Photos</span></h2>
 									</header>
@@ -334,19 +326,18 @@
 											<a href="#" class="image fit"><img src="images/pic15.jpg" alt="" /></a>
 										</div>
 									</div>
-								</section>
+								</section> -->
 
 						</div>
-						<hr />
+						<!-- <hr /> -->
 						<div class="row">
 							<div class="col-12">
 
 								<!-- Contact -->
 									<section class="contact">
 										<header>
-											<h3>Nisl turpis nascetur interdum?</h3>
+											<h3>Follow us on social media to stay updated and connected!</h3>
 										</header>
-										<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
 										<ul class="icons">
 											<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -360,7 +351,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Untitled. All rights reserved.</li>
 										</ul>
 									</div>
 
